--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.10",
     "modern-normalize": "1.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -13,8 +16,7 @@
     "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "@babel/runtime": "7.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
